Created root homepage

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<h2>All <%= products.count %> Products</h2>
+<h2><a href="/"> Mallory Furniture</a></h2>
 
 <% products.each do |product| %>
   <header>
