--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,6 @@
-<h2><%= product.name %></h2>
+<h2><a href="/"> Mallory Furniture</a></h2>
+
+<h3><%= product.name %></h3>
 
 <header>
   <p><%= product.condition %></p>
