--- a/app/views/products/root.html.erb
+++ b/app/views/products/root.html.erb
@@ -1,1 +1,3 @@
-<h2><a href="/products/"> Mallory Furniture</a></h2>
+<h2> Mallory Furniture </h2>
+<h4><a href="/"> Home </a></h4>
+<h4><a href="/products/"> Products </a></h4>
