--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,6 @@
-<h2><a href="/"> Mallory Furniture</a></h2>
+<h2> Mallory Furniture </h2>
+<h4><a href="/"> Home </a></h4>
+<h4><a href="/products/"> Products </a></h4>
 
 <h3><%= product.name %></h3>
 
