--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>MalloryFunitureStore</title>
     <%= csrf_meta_tags %>
@@ -8,7 +9,13 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <nav>
+      <body background="http://www.ezdecorator.com/img/gallery/218796-7.jpg">
+    <h1 class="Business_Name"> Mallory Furniture </h1></body>
+  </nav>
+
+<body>
     <%= yield %>
-  </body>
+</body>
+
 </html>
