--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,20 +1,37 @@
-<h2> Mallory Furniture </h2>
-<h4><a href="/"> Home </a></h4>
-<h4><a href="/products/"> Products </a></h4>
+<nav>
+  <h2><a href="/" class="nav-links home">
+            <img src="https://lh6.ggpht.com/MoYMYZHfiHaoWl0uhLO2z0xZjq48a2hHnPF52zg7McCHSM8Raz-dNBI7rf4HhN2phOY=w170"/>  </a></h2>
 
-<% products.each do |product| %>
-  <header>
-    <h3><a href="/products/<%= product.id %>"> <%= product.name %></a></h3>
+</nav>
+  <body>
 
-      <p><%= product.condition %></p>
+    <% products.each do |product| %>
+
+      <div class="index_transbox">
+
+          <a href="/products/<%= product.id %>">
+            <% if Product.select(:name).where("name LIKE '%bag%'")%>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Hermes_Ostrich_Birkin_Bag.jpg"/></a>
+
+            <% elsif Product.select(:name).where("name LIKE '%knife%'")%>
+              <img src="http://www.sabatier-shop.com/client/gfx/photos/produit/244.jpg"/></a>
+            <%end%>
+
+
+      <h3><a href="/products/<%= product.id %>"> <%= product.name %></a></h3>
+
+      <p><%= "Quality: #{product.condition}" %></p>
+
       <p><%= "$#{product.discount}" %>
         <% if product.on_clearance %>
-          <%= " - 10% off!! (Original price = $#{product.price * 1.1})" if product.condition.downcase == 'average' %>
-          <%= " - 20% off!! (Original price = $#{product.price * 1.2})" if product.condition.downcase == 'good' %>
+          <%= " - Clearance: 10% off! (Original price = $#{(product.price / 0.9).round})" if product.condition.downcase == 'fair' %>
+          <%= " - Clearance: 20% off! (Original price = $#{(product.price / 0.8).round})" if product.condition.downcase == 'good' %>
         <% end %></p>
 
       <p><%= "#{product.quantity} items left in stock!" %></p>
 
+    </div>
 
-  </header>
+  </body>
+
 <% end %>
