--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,15 +7,24 @@
 
     <% products.each do |product| %>
 
-      <div class="index_transbox">
-
-          <a href="/products/<%= product.id %>">
-            <% if product1 %>
-              <img src="https://s-media-cache-ak0.pinimg.com/564x/ab/91/63/ab9163124947a001a497857eaae8f0f6.jpg"/></a>
-
-            <% elsif product2 %>
-              <img src="http://www.sabatier-shop.com/client/gfx/photos/produit/244.jpg"/></a>
-            <%end%>
+    <div class="index_transbox">
+      <% if product.name.downcase.include?("lamp")%>
+        <a href="http://ab.weimgs.com/weimgs/ab/images/wcm/products/201616/0062/small-pillar-table-lamp-marble-c.jpg">
+          <img src="http://ab.weimgs.com/weimgs/ab/images/wcm/products/201616/0062/small-pillar-table-lamp-marble-c.jpg"/>
+        </a>
+      <% elsif product.name.downcase.include?("plate") %>
+        <a href="http://www.bluepheasant.com/media/catalog/product/cache/1/image/1800x/040ec09b1e35df139433887a97daa66f/b/l/bluepheasant_eleni_white_plates.jpg"/>
+          <img src="http://www.bluepheasant.com/media/catalog/product/cache/1/image/1800x/040ec09b1e35df139433887a97daa66f/b/l/bluepheasant_eleni_white_plates.jpg"/></a>
+      <% elsif product.name.downcase.include?("shirt") %>
+        <a href="http://www.chainmail.net/images/uploads/steel-shirt-front.jpg"/>
+          <img src="http://www.chainmail.net/images/uploads/steel-shirt-front.jpg"/></a>
+      <% elsif product.name.downcase.include?("pants") %>
+        <a href="https://cdnc.lystit.com/photos/7b10-2014/07/22/berek-gold-copper-reptile-print-pants-6-product-1-21937480-3-928234625-normal.jpeg"/>
+          <img src="https://cdnc.lystit.com/photos/7b10-2014/07/22/berek-gold-copper-reptile-print-pants-6-product-1-21937480-3-928234625-normal.jpeg"/></a>
+      <% elsif product.name.downcase.include?("bottle") %>
+        <a href="http://previews.123rf.com/images/rednaxel/rednaxel1002/rednaxel100200080/6452416-wooden-bottle-and-wineglass-Stock-Photo.jpg"/>
+          <img src="http://previews.123rf.com/images/rednaxel/rednaxel1002/rednaxel100200080/6452416-wooden-bottle-and-wineglass-Stock-Photo.jpg"/></a>
+      <% end %>
 
 
       <h3 class="item"><a href="/products/<%= product.id %>"> <%= product.name %></a></h3>
