--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,9 @@
   <% elsif product.name.downcase.include?("bottle") %>
     <a href="http://previews.123rf.com/images/rednaxel/rednaxel1002/rednaxel100200080/6452416-wooden-bottle-and-wineglass-Stock-Photo.jpg"/>
       <img src="http://previews.123rf.com/images/rednaxel/rednaxel1002/rednaxel100200080/6452416-wooden-bottle-and-wineglass-Stock-Photo.jpg"/></a>
+  <% else %>
+    <a href="https://cdn-ssl.s7.disneystore.com/is/image/DisneyShopping/7512055880150"/>
+      <img src="https://cdn-ssl.s7.disneystore.com/is/image/DisneyShopping/7512055880150"/></a>
   <% end %>
 
     <h3> <%= product.name %> </h3>
