--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,9 @@
-<nav>
-  <h2><a href="/" class="nav-links home">
-    <img src="https://lh6.ggpht.com/MoYMYZHfiHaoWl0uhLO2z0xZjq48a2hHnPF52zg7McCHSM8Raz-dNBI7rf4HhN2phOY=w170"/></a>
-  </h2>
-</nav>
+<div>
+  <h2><a href="/products/" class="nav-links back"> Products </a></h2>
+  <h2><a href="/" class="nav-links home"> Home </a></h2>
+</div>
 
-<body>
+<div>
 
   <% products.each do |product| %>
 
@@ -27,6 +26,6 @@
 
   </div>
 
-</body>
+</div>
 
 <% end %>
