--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,33 +24,45 @@ nav {
 nav {
   background: #E5D9A9;
   border: 1px solid black;
+  padding-bottom: 10px;
+  height: 45px;
+}
+
+.main-header {
+  height: 200px;
 }
 
 /************ DASHBOARD **************/
 
-.Business_Name {
-  margin: 5px 0px;
-  text-align: center;
+.business-name a {
   background: #2E3E4F;
-  padding: 20px;
+  text-decoration: none;
   color: white;
 }
 
-nav body {
-  background-color: rgba(0,0,0,.5);
+nav {
+  text-align: center;
+  background-color: #2E3E4F;
+  border: 1px solid white;
+  border-top: 10px solid white;
+  border-bottom: 10px solid white;
+}
+
+body {
+  background-image: url("http://q10rd3irg4-flywheel.netdna-ssl.com/wp-content/uploads/2016/05/4-640x426.jpg");
 }
 
 .dash1 {
   text-align: right;
-  background: #E5D9A9;
-  margin: 25px 5px;
+  padding: 25px 5px;
+  margin: 0;
   border: none;
 }
 
 .dash2 {
   text-align: right;
-  background: #E5D9A9;
-  margin: 15px 5px;
+  padding: 15px 5px;
+  margin: 0;
   border: none;
 }
 
@@ -61,7 +73,7 @@ nav body {
   height: 15px;
   background: #307CB5;
   padding: 10px;
-  margin: 10px;
+  margin: 0;
   text-align: center;
   border-radius: 5px;
   color: white;
@@ -72,19 +84,42 @@ nav body {
 
 /********** HOME/BACK BUTTONS ***********/
 
-.nav-links.home img {
-  float: right;
+div h2 {
+  background-color: #2E3E4F;
   height: 50px;
-  width: 50px;
-  margin: 10px;
+  margin: 0;
+  padding-top: 5px;
 }
 
-.nav-links.back img {
+.nav-links.home {
   float: right;
-  height: 50px;
-  width: 50px;
-  margin: 10px;
+  background-color: #2E3E4F;
+  margin-right: 10px;
+  text-decoration: none;
+  color: white;
+  transition: all 0.1s;
 }
+
+.nav-links.home:hover {
+  border-bottom: 10px solid white;
+  transition: all 0.1s;
+}
+
+.nav-links.back {
+  float: right;
+  background-color: #2E3E4F;
+  margin-right: 10px;
+  text-decoration: none;
+  color: white;
+  transition: all 0.1s;
+}
+
+.nav-links.back:hover {
+  border-bottom: 10px solid white;
+  transition: all 0.1s;
+}
+
+
 
 /*****************************************/
 
