--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,9 @@
-<nav>
-  <h2><a href="/" class="nav-links home">
-            <img src="https://lh6.ggpht.com/MoYMYZHfiHaoWl0uhLO2z0xZjq48a2hHnPF52zg7McCHSM8Raz-dNBI7rf4HhN2phOY=w170"/>  </a></h2>
+<div>
+  <h2><a href="/products/" class="nav-links back"> Products </a></h2>
+  <h2><a href="/" class="nav-links home"> Home </a></h2>
+</div>
 
-  <h2><a href="/products/" class="nav-links back" >
-            <img src="https://www.wallcharts.com/html5/objects/Wallcharts/images/back_img@src.png"/></a></h2>
-</nav>
-<body>
+<div>
 
 <div class="show_transbox">
   <a href="/products/<%= product.id %> ">
@@ -26,4 +24,4 @@
   </div>
 
 
-</body>
+</div>
