--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,6 @@
 <div>
-  <h2><a href="/products/" class="nav-links back"> Products </a></h2>
-  <h2><a href="/" class="nav-links home"> Home </a></h2>
+  <h2><a href="/products/" class="nav-links back"> <img src="http://downloadicons.net/sites/default/files/returns--icon-30696.png"/> </a></h2>
+  <h2><a href="/" class="nav-links home">  <img src="http://www.bestpeer.com/img/home.png"/> </a></h2>
 </div>
 
 <div>
