--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="main-header">
   <h3 class="dash1">Your Furniture is Old.</h3>
   <h4 class="dash2">Ours is older.</h4>
-  <h5><a href="/products/" class="button"> Check out our products => </a></h5>
+  <h5><a href="/categories/" class="button"> Check out our products => </a></h5>
 </div>
