--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,7 +13,7 @@
         <img src="<%= cats.cat_url %>" />
       </a>
 
-      <h3 class="cat-list"><a href="/categories/<%= cats.id %>"> <%= cats.title %></a></h3>
+      <h3 class="item"><a href="/categories/<%= cats.id %>"> <%= cats.title %></a></h3>
 
     </div>
   <% end %>
