--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,7 +29,7 @@
 
       <p2><%= "#{product.quantity} items left in stock!" %></p2>
 
-      <p><a href="/categories/" class="cat-back"><%= "Back to #{cat.title}" %></a></p>
+      <p><a href="/categories/<%=cat.id%>" class="cat-back"><%= "Back to #{cat.title}" %></a></p>
 
 
     </div>
