--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 
   <body>
-    <nav><h1 class="business-name"><a href="/products/">Mallory Furniture</a></h1></nav>
+    <nav><h1 class="business-name"><a href="/">Mallory Furniture</a></h1></nav>
 
       <%= yield %>
   </body>
