--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h2><a href="/products/" class="nav-links back"> <img src="http://www.primalcom.com/images/Icon-arrow-right.png"/> </a></h2>
+  <h2><a href="/products/" class="nav-links back"> <img src="http://www.primalcom.com/images/Icon-arrow-right.png"/> </a>
   <h2><a href="/" class="nav-links home">  <img src="http://www.bestpeer.com/img/home.png"/> </a></h2>
 </div>
 
@@ -9,13 +9,16 @@
 
     <div class="index_transbox">
 
-      <a href="/categories/<%= cats.id %> ">
-        <img src="<%= cats.cat_url %>" />
-      </a>
+      <%= link_to("/categories/#{cats.id}") do %>
+        <%= image_tag(cats.cat_url) %>
+      <% end %>
 
-      <h3 class="item"><a href="/categories/<%= cats.id %>"> <%= cats.title %></a></h3>
+      <h3 class="item">
+        <%= link_to cats.title, "/categories/#{cats.id}" %>
+      </h3>
 
     </div>
+
   <% end %>
 
 </div>
