--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,31 +4,34 @@
 </div>
 
 <div>
-
-  <% Product.all.each do |product| %>
+  <% products.each do |product| %>
     <% if product.category_id == category.id %>
-    <div class="index_transbox">
+      <div class="index_transbox">
 
-      <a href="/products/<%= product.id %>">
-        <img src="<%= product.prod_url %>" />
-      </a>
+        <%= link_to("/products/#{product.id}") do %>
+          <%= image_tag(product.prod_url) %>
+        <% end %>
 
-    <h3 class="item"><a href="/products/<%= product.id %>"> <%= product.name %></a></h3>
+        <h3 class="item">
+          <%= link_to product.name, "/products/#{product.id}" %>
+        </h3>
 
-    <p><%= "Quality: #{product.condition}" %></p>
+        <p><%= "Quality: #{product.condition}" %></p>
 
-    <p1><%= "Price: $#{product.discount}" %>
-      <% if product.on_clearance %>
-        <%= " - Clearance: 10% off! (Original price = $#{(product.price / 0.9).round})" if product.condition.downcase == 'fair' %>
-        <%= " - Clearance: 20% off! (Original price = $#{(product.price / 0.8).round})" if product.condition.downcase == 'good' %>
-      <% end %>
-    </p1>
+        <p class="price"><%= "Price: $#{product.discount}" %>
+          <% if product.on_clearance %>
+            <%= " - Clearance: 10% off! (Original price = $#{(product.price / 0.9).round})" if product.condition.downcase == 'fair' %>
+            <%= " - Clearance: 20% off! (Original price = $#{(product.price / 0.8).round})" if product.condition.downcase == 'good' %>
+          <% end %>
+        </p1>
 
-    <p2><%= "#{product.quantity} items left in stock!" %></p2>
+        <p2 class="quantity"><%= "#{product.quantity} items left in stock!" %></p2>
 
-    <p><a href="/categories/" class="cat-prod"><%= "Back to category list" %></a></p>
+        <p>
+          <%= link_to("Back to category list", "/categories", class: "cat-prod") %>
+        </p>
 
-  </div>
-  <% end %>
+      </div>
+    <% end %>
   <% end %>
 </div>
