--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,7 @@
 <div>
-  <h2><a href="/categories/" class="nav-links back"> <img src="http://downloadicons.net/sites/default/files/returns--icon-30696.png"/> </a></h2>
-  <h2><a href="/" class="nav-links home">  <img src="http://www.bestpeer.com/img/home.png"/> </a></h2>
+  <h2><a href="/categories/" class="back"> <img src="http://downloadicons.net/sites/default/files/returns--icon-30696.png"/> </a>
+  <h2><a href="/" class="home">  <img src="http://www.bestpeer.com/img/home.png"/> </a>
+  </h2>
 </div>
 
 <div>
@@ -10,29 +11,30 @@
   <% Category.all.each do |cat| %>
     <% if cat.id == product.category_id %>
 
-    <div class="index_transbox">
+      <div class="index_transbox">
 
-      <a href="/products/<%= product.id %> ">
-        <img src="<%= product.prod_url %>" />
-      </a>
-
-      <h3 class="item"><a href="/products/<%= product.id %>"> <%= product.name %></a></h3>
-
-      <p><%= "Quality: #{product.condition}" %></p>
-
-      <p1><%= "Price: $#{product.discount}" %>
-        <% if product.on_clearance %>
-          <%= " - Clearance: 10% off! (Original price = $#{(product.price / 0.9).round})" if product.condition.downcase == 'fair' %>
-          <%= " - Clearance: 20% off! (Original price = $#{(product.price / 0.8).round})" if product.condition.downcase == 'good' %>
+        <%= link_to "/products/#{product.id}" do %>
+          <%= image_tag(product.prod_url) %>
         <% end %>
-      </p1>
 
-      <p2><%= "#{product.quantity} items left in stock!" %></p2>
+        <h3 class="item">
+          <%= link_to product.name, "/products/#{product.id}" %>
+        </h3>
 
-      <p><a href="/categories/<%=cat.id%>" class="cat-back"><%= "Back to #{cat.title}" %></a></p>
+        <p><%= "Quality: #{product.condition}" %></p>
 
+        <p1 class="price"><%= "Price: $#{product.discount}" %>
+          <% if product.on_clearance %>
+            <%= " - Clearance: 10% off! (Original price = $#{(product.price / 0.9).round})" if product.condition.downcase == 'fair' %>
+            <%= " - Clearance: 20% off! (Original price = $#{(product.price / 0.8).round})" if product.condition.downcase == 'good' %>
+          <% end %>
+        </p1>
 
-    </div>
+        <p2 class="quantity"><%= "#{product.quantity} items left in stock!" %></p2>
+
+        <p><a href="/categories/<%=cat.id%>" class="cat-back"><%= "Back to #{cat.title}" %></a></p>
+
+      </div>
     <% end %>
 
 
