changed remaining href's to link_to with image_tags where needed

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,14 @@
 <div>
-  <h2><a href="/products/" class="nav-links back"> <img src="http://www.primalcom.com/images/Icon-arrow-right.png"/> </a>
-  <h2><a href="/" class="nav-links home">  <img src="http://www.bestpeer.com/img/home.png"/> </a></h2>
+  <h2>
+    <%= link_to("/products/", class: "nav-links back") do %>
+      <%= image_tag("http://www.primalcom.com/images/Icon-arrow-right.png") %>
+    <% end %>
+  </h2>
+  <h2>
+    <%= link_to("/", class: "nav-links home") do %>
+      <%= image_tag("http://www.bestpeer.com/img/home.png") %>
+    <% end %>
+  </h2>
 </div>
 
 <div>
