--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,8 @@ nav {
   overflow: hidden;
   border: 1px solid black;
   padding-bottom: 20px;
+  border-radius: 7px;
+  box-shadow: 3px 3px 10px $banner-color-light;
   height: 45px;
   text-align: center;
   background-color: $banner-color;
