--- a/app/assets/stylesheets/item_boxes.scss
+++ b/app/assets/stylesheets/item_boxes.scss
@@ -23,7 +23,8 @@
   float: left;
   text-align: center;
   background-color: $box-color;
-  border: 1px solid black;
+  border-radius: 7px;
+  box-shadow: 3px 3px 10px $banner-color-light;
   margin: 10px;
   width: 260px;
   height: 450px;
@@ -57,6 +58,8 @@
   height: 400px;
   float: center;
   background-color: $box-color;
+  border-radius: 7px;
+  box-shadow: 3px 3px 7px $banner-color-light;
   border: 1px solid black;
   img {
     float: left;
